 * Test run and Test run + Import actions for import screen

2006-12-13 cjg
 * Fixed OldXML export.

2006-12-13 tmb
 * Added redirect_to_me_url subs to fix Public::RequestCopy and 
    Request::Respond screens 
 * Removed "click here" from request copy email

2006-12-13 tmb
 * Added eprintid param to title dup lookup so that the current record isn't 
    suggested as a duplicate
 * Wrapping for warning/error messages in Import screen

2006-12-13 tmb
 * Don't try and suggest duplicate titles unless at least 5 chars have been typed

2006-12-13 cjg
 * erase_eprints now offers to rebuild static pages.
 * added google scholar headers
 * moved LINKS in eprint_render to being done by plugins - cleaner 
    eprint_render.pl
 * Added \n after header links to make produced page less annoying.
 
2006-12-13 cjg
 * Tiny change to render_citation so that we can pass through a target param.
 * Used this to stop entire citation being a link in title_lookup

2006-12-14 cjg
 * Fixed rendering problem with itemref fields.

2006-12-14 cjg
 * Moved google-friendly headers into a plugin called "simple" and 
    made it available as an export option.

2006-12-14 cjg
 * Minor change to lookup scripts to make them work in mysql 4.

2006-12-14 cjg
 * Registration errors now use proper error message style.

2006-12-14 cjg
 * Document upload no longer required by default (but a warning is still
    given).

2006-12-14 cjg
 * Removed unused secure template.

2006-12-14 tdb
 * Increased dependency for LibXML to 1.62 (segfault under 1.58* that I
    can't identify).
 * Modified BackCompatibility to set %INC correctly (now works with
    Apache::Reload!)

2006-12-14 cjg
 * Fixed odd situation when screen plugin forgot it's session
 * Added option to disable plugins by default and then de-disable them per
    repository.
 * Changed disable config option from {pluginid}->{disable} to 
    {pluginid}->{params}->{disable} and updated plugins.pl to reflect this.